Fix logo size on IE 11

--- a/src/sass/_frontpage.scss
+++ b/src/sass/_frontpage.scss
@@ -42,6 +42,7 @@ $speed: 2s;
         max-width: 1200px;
         width: 90%;
         svg {
+          height: auto;
           width: 100%;
         }
       }
